// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filters renders leave details and is_reviewable filters 1`] = `
<fieldset
  class="usa-fieldset margin-top-3 usa-form-group"
>
  <legend
    class="usa-label text-bold usa-legend font-heading-xs measure-5"
  >
    Leave details
  </legend>
  <div
    class=""
  >
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        class="usa-radio__input"
        id="InputChoice135"
        name="request_decision"
        type="radio"
        value="approved"
      />
      <label
        class="usa-radio__label"
        for="InputChoice135"
      >
        Approved
      </label>
    </div>
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        class="usa-radio__input"
        id="InputChoice136"
        name="request_decision"
        type="radio"
        value="cancelled"
      />
      <label
        class="usa-radio__label"
        for="InputChoice136"
      >
        Cancelled
      </label>
    </div>
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        class="usa-radio__input"
        id="InputChoice137"
        name="request_decision"
        type="radio"
        value="denied"
      />
      <label
        class="usa-radio__label"
        for="InputChoice137"
      >
        Denied
      </label>
    </div>
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        class="usa-radio__input"
        id="InputChoice138"
        name="request_decision"
        type="radio"
        value="pending"
      />
      <label
        class="usa-radio__label"
        for="InputChoice138"
      >
        Pending
      </label>
    </div>
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        class="usa-radio__input"
        id="InputChoice139"
        name="request_decision"
        type="radio"
        value="withdrawn"
      />
      <label
        class="usa-radio__label"
        for="InputChoice139"
      >
        Withdrawn
      </label>
    </div>
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        checked=""
        class="usa-radio__input"
        id="InputChoice140"
        name="request_decision"
        type="radio"
        value=""
      />
      <label
        class="usa-radio__label"
        for="InputChoice140"
      >
        Show all
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`Filters renders leave details and is_reviewable filters 2`] = `
<fieldset
  class="usa-fieldset margin-top-3 usa-form-group"
>
  <legend
    class="usa-label text-bold usa-legend font-heading-xs measure-5"
  >
    Review requested
  </legend>
  <div
    class=""
  >
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        class="usa-radio__input"
        id="InputChoice132"
        name="is_reviewable"
        type="radio"
        value="yes"
      />
      <label
        class="usa-radio__label"
        for="InputChoice132"
      >
        Yes, review requested
      </label>
    </div>
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        class="usa-radio__input"
        id="InputChoice133"
        name="is_reviewable"
        type="radio"
        value="no"
      />
      <label
        class="usa-radio__label"
        for="InputChoice133"
      >
        No, review not needed
      </label>
    </div>
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        checked=""
        class="usa-radio__input"
        id="InputChoice134"
        name="is_reviewable"
        type="radio"
        value=""
      />
      <label
        class="usa-radio__label"
        for="InputChoice134"
      >
        Show all
      </label>
    </div>
  </div>
</fieldset>
`;
